# dpm

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  cla.yml  release-image.yml
ci/gitlab/: dpm-manifests.yml
docs/: DATA_GOVERNANCE_SPEC.md  canonical-model.md  ci-github.md  ci-gitlab.md  getting-started.md  gitlab-setup.md  steward-guide.md
examples/aviation/flights/: CODEOWNERS  manifest.yaml  physical_layout.yml  quality_rules.yml  runbook.md  schema.avsc  semantics.yml  sla.yml
examples/canonical/aircraft_observation/: CODEOWNERS
src/dpm/: __init__.py  cli.py  manifest_loader.py
src/dpm/codeowners/: __init__.py  check_mr_approvals.py  codeowners.py
src/dpm/lib/: common.py
src/dpm/validators/: CODEOWNERS  analyze_impact.py  check_version_bump.py  conformance_impact.py  detect_breaking_changes.py  report.py  suggest_version.py  validate_conformance.py  validate_governance.py  validate_manifest.py  validate_quality_rules.py
templates/: CODEOWNERS  manifest-template.yaml  physical_layout-template.yml  quality_rules-template.yml  runbook-template.md  schema-template.avsc  semantics-template.yml  sla-template.yml
templates/canonical-entity-template/: manifest.yaml  schema.avsc
tests/: conftest.py  test_analyze_impact.py  test_check_mr_approvals.py  test_check_version_bump.py  test_cli.py  test_codeowners.py  test_conformance_impact.py  test_detect_breaking_changes.py  test_lib_common.py  test_manifest_loader.py  test_suggest_version.py  test_validate_conformance.py  test_validate_governance.py  test_validate_manifest.py  test_validate_quality_rules.py
(+2 files in other folders)
